src/objects/Renewal_Reinstatement_Eligibility__c.object
<CustomObject>
    <description>To store configuration logic for renewal/reinstatement of Credential/Permit which can later be used by DRE</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credential_Or_Permit__c</fullName>
        <description>To store credential or permit name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credential Or Permit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Late_Renew_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Late Renew Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reinstatement_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine whether a credential/permit is reinstatement eligible post late renewal</description>
        <inlineHelpText>To determine whether a credential/permit is reinstatement eligible post late renewal</inlineHelpText>
        <label>Is Reinstatement Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Late_Ren_Eligible_Until_N_Days_After_Exp__c</fullName>
        <description>To store until how many days after expiry is a credential/permit late renewal eligible</description>
        <label>Late Ren Eligible Until N Days After Exp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Program_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reinstatement_Eligible_End_Date__c</fullName>
        <label>Reinstatement Eligible End Date</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Eligible_N_Days_After_Exp__c</fullName>
        <description>To store number of days after which credential/permit becomes reinstatement eligible</description>
        <label>Reinstatement Eligible N Days After Exp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Eligible_N_Days_Before_Expiry__c</fullName>
        <description>To store how many days before the expiration date does a credential/permit becomes renewal eligible</description>
        <label>Renewal Eligible N Days Before Expiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Grace_Period_N_Days_After_Expiry__c</fullName>
        <label>Renewal Grace Period N Days After Expiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Renewal Reinstatement Eligibility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>License_Type__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Late_Ren_Eligible_Until_N_Days_After_Exp__c</columns>
        <columns>Reinstatement_Eligible_N_Days_After_Exp__c</columns>
        <columns>Renewal_Eligible_N_Days_Before_Expiry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Reinstatement Eligibility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Reinstatement Eligibility</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>